--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,8 +5,8 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        style="@style/DefaultPosition"
+        android:orientation="vertical">
 
     <ImageView
             android:src="@drawable/logounivc"
@@ -18,9 +18,11 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="100dp"
-            android:hint="Usuário"
+            android:inputType="textPersonName"
+            android:autofillHints="name"
+            android:hint="@string/usuario"
             android:textColor="@color/black"
-            android:background="@color/gray"
+            android:background="@drawable/rounded_edittext"
             android:gravity="center"
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
@@ -28,9 +30,11 @@
     <EditText
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Senha"
+            android:inputType="textPassword"
+            android:autofillHints="password"
+            android:hint="@string/senha"
             android:textColor="@color/black"
-            android:background="@color/gray"
+            android:background="@drawable/rounded_edittext"
             android:gravity="center"
             android:textStyle="bold"
             android:layout_marginBottom="10dp" />
@@ -38,8 +42,9 @@
     <Button
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:textSize="15sp"
             android:layout_marginTop="40dp"
-            android:text="Entrar"
+            android:text="@string/entrar"
             android:backgroundTint="@color/darkGreen"
             android:gravity="center"
             android:textStyle="bold" />
