--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="16dp">
+        style="@style/DefaultPosition"
+        android:orientation="vertical">
 
     <ImageView
             android:src="@drawable/logounivc"
@@ -26,7 +26,8 @@
 
     <Button
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
+            android:textSize="15sp"
             android:text="@string/professor"
             android:backgroundTint="@color/darkGreen"
             android:textColor="@color/white"
@@ -38,14 +39,15 @@
             android:layout_height="wrap_content"
             android:text="@string/ou"
             android:textSize="12sp"
-            android:textColor="@color/gray"
+            android:textColor="@color/grayA6"
             android:layout_marginBottom="10dp"
             android:layout_gravity="center" />
 
 
     <Button
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="80dp"
+            android:textSize="15sp"
             android:text="@string/porteiro"
             android:backgroundTint="@color/darkGreen"
             android:textColor="@color/white"
