--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkGreen">#032915</color>
-    <color name="gray">#d9d9d9</color>
+    <color name="grayA6">#a6a6a6</color>
+    <color name="grayEF">#EFEFEF</color>
 </resources>
