--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="darkGreen">#032915</color>
     <color name="grayA6">#a6a6a6</color>
-    <color name="grayEF">#EFEFEF</color>
+    <color name="grayC0">#C0C0C0</color>
 </resources>
