--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
             android:layout_marginBottom="10dp" />
 
     <Button
+            android:id="@+id/botao_login"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:textSize="15sp"
