--- a/app/src/main/res/layout/activity_porteiro.xml
+++ b/app/src/main/res/layout/activity_porteiro.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/main"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -17,7 +17,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nome do professor"
+                android:text="Nome do porteiro"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -56,16 +56,13 @@
                 style="@style/BotoesTelaPrincipal"
                 android:text="Chaves"
                 android:layout_marginTop="10dp"/>
+
+        <Button
+                android:layout_marginRight="5dp"
+                android:layout_columnWeight="1"
+                style="@style/BotoesTelaPrincipal"
+                android:text="Professores"
+                android:layout_marginTop="10dp"/>
     </GridLayout>
 
-        <TextView
-                style="@style/DefaultPosition"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Histórico de empréstimos"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-    </LinearLayout>
+</LinearLayout>
