--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,10 @@
     </style>
     
     <style name="BotoesTelaPrincipal">
+        <item name="android:layout_height">120dp</item>
+        <item name="android:layout_width">0dp</item>
         <item name="android:backgroundTint">#C0C0C0</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">13sp</item>
     </style>
 </resources>
