--- a/app/src/main/res/layout/activity_professor.xml
+++ b/app/src/main/res/layout/activity_professor.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/main"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -14,6 +14,13 @@
             android:orientation="horizontal"
             android:gravity="center_vertical">
 
+        <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/UsuárioIcone"
+                android:layout_marginEnd="10dp"
+                android:contentDescription="Ícone de usuário" />
+
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -21,51 +28,64 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_weight="1"/>
+                android:layout_weight="1" />
 
     </LinearLayout>
 
     <GridLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             style="@style/DefaultPosition"
             android:columnCount="3"
             android:rowCount="2"
             android:layout_marginTop="20dp">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
                 android:layout_marginRight="5dp"
-                android:layout_columnWeight="1"
                 style="@style/BotoesTelaPrincipal"
-                android:text="Reservar"/>
+                android:text="Reservar"
+                app:icon="@drawable/reservar"
+                app:iconSize="60dp"
+                app:iconGravity="textTop"
+                app:iconPadding="5dp"/>
 
-        <Button
+        <com.google.android.material.button.MaterialButton
                 android:layout_marginRight="5dp"
-                android:layout_columnWeight="1"
                 style="@style/BotoesTelaPrincipal"
-                android:text="Consultar"/>
+                android:text="Consultar"
+                app:icon="@drawable/search"
+                app:iconGravity="textTop"
+                app:iconPadding="15dp"/>
 
-        <Button
-                android:layout_columnWeight="1"
-                style="@style/BotoesTelaPrincipal"
-                android:text="Laboratório"/>
-
-        <Button
+        <com.google.android.material.button.MaterialButton
                 android:layout_marginRight="5dp"
-                android:layout_columnWeight="1"
+                style="@style/BotoesTelaPrincipal"
+                android:text="Laboratório"
+                app:icon="@drawable/laborat_rios"
+                app:iconSize="65dp"
+                app:iconGravity="textTop"
+                app:iconPadding="0dp"/>
+
+        <com.google.android.material.button.MaterialButton
+                android:layout_marginRight="5dp"
                 style="@style/BotoesTelaPrincipal"
                 android:text="Chaves"
-                android:layout_marginTop="10dp"/>
+                app:icon="@drawable/chaves"
+                app:iconGravity="textTop"
+                app:iconPadding="15dp"/>
+
     </GridLayout>
 
-        <TextView
-                style="@style/DefaultPosition"
-                android:layout_marginTop="50dp"
-                android:layout_marginBottom="10dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Histórico de empréstimos"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+    <TextView
+            style="@style/DefaultPosition"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Histórico de empréstimos"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-    </LinearLayout>
+</LinearLayout>
