--- a/app/src/main/res/layout/activity_professor.xml
+++ b/app/src/main/res/layout/activity_professor.xml
@@ -17,7 +17,7 @@
         <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/UsuárioIcone"
+                android:src="@drawable/icone"
                 android:layout_marginEnd="10dp"
                 android:contentDescription="Ícone de usuário" />
 
