--- a/app/src/main/res/layout/activity_professor.xml
+++ b/app/src/main/res/layout/activity_professor.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="20dp">
 
         <com.google.android.material.button.MaterialButton
+                android:id="@+id/botao_reserva"
                 style="@style/BotoesTelaPrincipal"
                 android:text="Reservar"
                 app:icon="@drawable/reservar" />
