--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,7 @@
     </style>
 
     <style name="BotoesTelaPrincipal">
+        <item name="iconTint">@color/black</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_columnWeight">1</item>
