--- a/app/src/main/res/layout/activity_login_porteiro.xml
+++ b/app/src/main/res/layout/activity_login_porteiro.xml
@@ -48,4 +48,13 @@
             android:gravity="center"
             android:textStyle="bold" />
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center"
+            android:textSize="16dp"
+            android:textColor="@color/darkGreen"
+            android:text="Ainda não possui uma conta? CADASTRE-SE" />
+
 </LinearLayout>
