--- a/app/src/main/res/layout/activity_login_professor.xml
+++ b/app/src/main/res/layout/activity_login_professor.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,5 +47,14 @@
             android:backgroundTint="@color/darkGreen"
             android:gravity="center"
             android:textStyle="bold" />
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center"
+            android:textSize="16dp"
+            android:textColor="@color/darkGreen"
+            android:text="Ainda não possui uma conta? CADASTRE-SE" />
 
 </LinearLayout>
